# scrub

./: .env  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.runsc.yml  docker-compose.yml  pyproject.toml
.claude/agents/: bandit.md  pytest.md  ruff.md
docker/: 99-cjk-subst.conf  clamd.conf
openspec/changes/archive/2026-04-09-archive-extraction/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-09-scrub/: design.md
openspec/changes/archive/2026-04-10-cjk-font-support/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-10-gz-csv-support/: design.md
openspec/changes/archive/2026-04-10-remove-clamav/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-10-text-format-support/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-11-text-extraction-mode/: design.md  (+2 more)
openspec/changes/extracts-dir/: design.md  proposal.md  tasks.md
openspec/changes/gz-csv-support/: proposal.md  tasks.md
openspec/changes/scrub/: proposal.md  tasks.md
openspec/specs/archive-extraction/: spec.md
openspec/specs/cjk-rendering/: spec.md
openspec/specs/cli/: spec.md
openspec/specs/csv-conversion/: spec.md
openspec/specs/filesystem-io/: spec.md
openspec/specs/text-format-detection/: spec.md
openspec/specs/text-format-rendering/: spec.md
scrub/: _fitz_worker.py  archive.py  clamav.py  cli.py  converter.py  fs.py  log.py  pipeline.py  quarantine.py  sanitize.py
tests/: test_archive.py  test_sanity.py  test_text_mode.py
tests/fixtures/: sample.csv  sample.html  sample.txt  sample.xml
(+23 files in other folders)
